# joypad-launcher

./: .gitignore  LICENSE  README.md  build_exe.bat  config.example.json  covers.py  input_remap.py  input_remap_editor.py  launcher.py  pyproject.toml  requirements-dev.txt  requirements.txt  scan_debug.py  scan_libraries.py  starter.py
.github/workflows/: ci.yml  (+1 more)
ddcci/: __init__.py  vcp.py  vcp_code.py
docs/: README.md  architecture.md  configuration.md  development.md  input-remap.md  streaming.md
input_profiles/: default_wasd_mouse.json  escape_from_duckov.json
joypad/: __init__.py  app.py  app_bootstrap.py  app_state.py  cli.py  paths.py
tests/: conftest.py  test_background_golden.py  test_bindings_golden.py  test_bootstrap_golden.py  test_button_hold_cursor.py  test_cli.py  test_config_types_golden.py  test_dispatch_events.py  test_editor_input.py  test_editor_slots_golden.py  test_entry_dispatch.py  test_fonts_golden.py  test_game_watch_targets.py  test_gamepad_starter.py  test_games_model_golden.py  test_home_drawing_smoke.py  test_home_geometry_golden.py  test_home_integration.py  test_home_model_golden.py  test_home_navigation.py  test_home_settings_open.py  test_home_ui_mode.py  test_integrations.py  test_launch_session.py  test_profiles_golden.py  test_profiles_more_golden.py  test_settings_golden.py  test_starter_autostart.py  test_steam_accounts.py  test_theme_golden.py  test_theme_scale_golden.py  test_tile_grid_golden.py  test_tiles_geometry_golden.py  test_twitch_config.py  test_wait_cancel.py  test_xinput_helpers.py  test_xinput_poll.py
(+205 files in other folders)
